force-app/main/default/objects/PMC_CPQ_FPDPriceFx__e/PMC_CPQ_FPDPriceFx__e.object-meta.xml
<CustomObject>
    <description>This platform event is to publish and subscribe events from Pricefx system.</description>
    <label>FPD from PriceFx</label>
    <pluralLabel>FPD from PriceFxs</pluralLabel>
</CustomObject>