force-app/main/default/objects/PMC_CPQ_FPDPriceFx__e/fields/PMC_CPQ_FPDPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_FPDPrice__c</fullName>
    <description>The FPD Price received from PriceFX</description>
    <label>FPD Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>