force-app/main/default/objects/PMC_CPQ_FPDPriceFx__e/fields/PMC_CPQ_IntegrationStatusMessage__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_IntegrationStatusMessage__c</fullName>
    <description>This field is to store the error message from the callout.</description>
    <label>Integration Status Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>