force-app/main/default/objects/PMC_CPQ_FPDPriceFx__e/fields/PMC_CPQ_InterfaceURL__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_InterfaceURL__c</fullName>
    <label>Interface URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>