force-app/main/default/objects/PMC_CPQ_FPDPriceFx__e/fields/PMC_CPQ_OrderItemId__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OrderItemId__c</fullName>
    <description>Field to hold the identify the id of the order product record</description>
    <label>Order Item Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>