force-app/main/default/objects/PMC_CPQ_FPDPriceFx__e/fields/PMC_CPQ_OrderLineIntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OrderLineIntegrationStatus__c</fullName>
    <label>Integration Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>